<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:padding="16dp">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/strength"
            style="@style/StatName"
            android:paddingBottom="8dp"
            android:text="@string/stat_strength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/strength_bar"/>

        <ProgressBar
            android:id="@+id/strength_bar"
            app:layout_constraintTop_toTopOf="@+id/strength"
            android:progress="66"
            style="@style/StatBar"
            app:layout_constraintStart_toEndOf="@+id/strength"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/strength_value"
            app:layout_constraintBottom_toBottomOf="@+id/strength"/>

        <TextView
            android:id="@+id/strength_value"
            app:layout_constraintTop_toTopOf="@+id/strength_bar"
            tools:text="66"
            style="@style/StatValue"
            app:layout_constraintStart_toEndOf="@+id/strength_bar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/strength_bar"/>

        <TextView
            android:id="@+id/magic"
            app:layout_constraintTop_toBottomOf="@id/strength"
            android:paddingBottom="8dp"
            android:text="@string/stats_magic"
            style="@style/StatName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/magic_bar"
            tools:layout_editor_absoluteY="51dp"/>

        <ProgressBar
            android:id="@+id/magic_bar"
            tools:progress="66"
            style="@style/StatBar"
            app:layout_constraintStart_toEndOf="@+id/magic"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/magic_value"
            app:layout_constraintTop_toTopOf="@+id/magic"
            app:layout_constraintBottom_toBottomOf="@+id/magic"
            tools:layout_editor_absoluteY="60dp"/>

        <TextView
            android:id="@+id/magic_value"
            tools:text="66"
            style="@style/StatValue"
            app:layout_constraintStart_toEndOf="@+id/magic_bar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/magic_bar"
            app:layout_constraintBottom_toBottomOf="@+id/magic_bar"
            tools:layout_editor_absoluteY="57dp"/>

        <TextView
            android:id="@+id/endurance"
            app:layout_constraintTop_toBottomOf="@id/magic"
            android:paddingBottom="8dp"
            android:text="@string/stats_endurance"
            style="@style/StatName"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/endurance_bar"/>

        <ProgressBar
            android:id="@+id/endurance_bar"
            tools:progress="66"
            style="@style/StatBar"
            app:layout_constraintStart_toEndOf="@+id/endurance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/endurance_value"
            app:layout_constraintTop_toTopOf="@+id/endurance"
            app:layout_constraintBottom_toBottomOf="@+id/endurance"/>

        <TextView
            tools:text="66"
            android:id="@+id/endurance_value"
            style="@style/StatValue"
            app:layout_constraintStart_toEndOf="@+id/endurance_bar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/endurance_bar"
            app:layout_constraintBottom_toBottomOf="@+id/endurance_bar"/>

        <TextView
            android:id="@+id/agility"
            app:layout_constraintTop_toBottomOf="@id/endurance"
            android:paddingBottom="8dp"
            android:text="@string/stats_agility"
            style="@style/StatName"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/agility_bar"/>

        <ProgressBar
            android:id="@+id/agility_bar"
            tools:progress="66"
            style="@style/StatBar"
            app:layout_constraintStart_toEndOf="@+id/agility"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/agility_value"
            app:layout_constraintTop_toTopOf="@+id/agility"
            app:layout_constraintBottom_toBottomOf="@+id/agility"/>

        <TextView
            android:id="@+id/agility_value"
            tools:text="66"
            style="@style/StatValue"
            app:layout_constraintStart_toEndOf="@+id/agility_bar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/agility_bar"
            app:layout_constraintBottom_toBottomOf="@+id/agility_bar"/>

        <TextView
            android:id="@+id/luck"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agility"
            app:layout_constraintRight_toLeftOf="@+id/luck_bar"
            android:text="@string/stats_luck"
            android:paddingBottom="8dp"
            style="@style/StatName"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/luck_bar"
            app:layout_constraintLeft_toRightOf="@id/luck"
            app:layout_constraintRight_toLeftOf="@+id/luck_value"
            style="@style/StatBar"
            tools:progress="66"
            app:layout_constraintTop_toTopOf="@+id/luck"
            app:layout_constraintBottom_toBottomOf="@+id/luck"/>

        <TextView
            android:id="@+id/luck_value"
            tools:text="66"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/StatValue"
            app:layout_constraintLeft_toRightOf="@id/luck_bar"
            app:layout_constraintTop_toTopOf="@+id/luck_bar"
            app:layout_constraintBottom_toBottomOf="@+id/luck_bar"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>